<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/calculatorCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="USD"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calculatorCurrencyBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="RUB"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/calculatorCurrencyAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="1000000000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calculatorCurrencyBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="70000000000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/calculatorBaseCurrencyDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="Russian Ruble"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorCurrencyBaseAmount" />

    <TextView
        android:id="@+id/calculatorCurrencyDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="US Dollar"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorCurrencyAmount" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#999"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorCurrencyDescription" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#999"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorBaseCurrencyDescription" />


    <Button
        android:id="@+id/calculatorButton7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_7"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButton8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_8"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toEndOf="@+id/calculatorButton7"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButton9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_9"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toEndOf="@+id/calculatorButton8"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButton4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_4"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton7"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButton5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_5"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toEndOf="@+id/calculatorButton4"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton8"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButton6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_6"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toEndOf="@+id/calculatorButton5"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton9"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButton1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_1"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton4"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButton2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_2"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toEndOf="@+id/calculatorButton1"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton5"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButton3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_button_3"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toEndOf="@+id/calculatorButton2"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton6"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculatorButtonPoint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton1"
        app:layout_constraintWidth_percent=".25"
        app:layout_constraintHeight_percent=".15"/>

    <Button
        android:id="@+id/calculatorButton0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="0"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toEndOf="@+id/calculatorButtonPoint"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton2"
        app:layout_constraintWidth_percent=".50" />

    <Button
        android:id="@+id/calculatorButtonDeleteAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="DEL"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/calculatorButton9"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintWidth_percent=".25"
        app:layout_constraintHeight_percent=".30"/>

    <Button
        android:id="@+id/calculatorButtonDeleteOneDigit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="->"
        android:textAlignment="center"
        app:layout_constraintHeight_percent=".30"
        app:layout_constraintStart_toEndOf="@+id/calculatorButton3"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButtonDeleteAll"
        app:layout_constraintWidth_percent=".25" />


</android.support.constraint.ConstraintLayout>